--- a/melo/configs/config.json
+++ b/melo/configs/config.json
@@ -10,7 +10,7 @@
       0.99
     ],
     "eps": 1e-09,
-    "batch_size": 6,
+    "batch_size": 8,
     "fp16_run": false,
     "lr_decay": 0.999875,
     "segment_size": 16384,
@@ -18,11 +18,12 @@
     "warmup_epochs": 0,
     "c_mel": 45,
     "c_kl": 1.0,
-    "skip_optimizer": true
+    "skip_optimizer": true,
+    "device": "cuda:0"
   },
   "data": {
-    "training_files": "",
-    "validation_files": "",
+    "training_files": "/storage2/melotts/dataset/infore/train.list",
+    "validation_files": "/storage2/melotts/dataset/infore/val.list",
     "max_wav_value": 32768.0,
     "sampling_rate": 44100,
     "filter_length": 2048,
@@ -32,9 +33,11 @@
     "mel_fmin": 0.0,
     "mel_fmax": null,
     "add_blank": true,
-    "n_speakers": 256,
+    "n_speakers": 1,
     "cleaned_text": true,
-    "spk2id": {}
+    "spk2id": {
+      "VI-default": 0
+    }
   },
   "model": {
     "use_spk_conditioned_encoder": true,
@@ -90,5 +93,229 @@
     "n_layers_q": 3,
     "use_spectral_norm": false,
     "gin_channels": 256
-  }
+  },
+  "device": "cuda:0",
+  "num_languages": 9,
+  "num_tones": 24,
+  "symbols": [
+    "_",
+    "\"",
+    "(",
+    ")",
+    "*",
+    "/",
+    ":",
+    "AA",
+    "E",
+    "EE",
+    "En",
+    "N",
+    "OO",
+    "Q",
+    "V",
+    "[",
+    "\\",
+    "]",
+    "^",
+    "a",
+    "a:",
+    "aa",
+    "ae",
+    "ah",
+    "ai",
+    "an",
+    "ang",
+    "ao",
+    "aw",
+    "ay",
+    "b",
+    "by",
+    "c",
+    "ch",
+    "d",
+    "dh",
+    "dy",
+    "e",
+    "e:",
+    "eh",
+    "ei",
+    "en",
+    "eng",
+    "er",
+    "ey",
+    "f",
+    "g",
+    "gy",
+    "h",
+    "hh",
+    "hy",
+    "i",
+    "i0",
+    "i:",
+    "ia",
+    "ian",
+    "iang",
+    "iao",
+    "ie",
+    "ih",
+    "in",
+    "ing",
+    "iong",
+    "ir",
+    "iu",
+    "iy",
+    "j",
+    "jh",
+    "k",
+    "ky",
+    "l",
+    "m",
+    "my",
+    "n",
+    "ng",
+    "ny",
+    "o",
+    "o:",
+    "ong",
+    "ou",
+    "ow",
+    "oy",
+    "p",
+    "py",
+    "q",
+    "r",
+    "ry",
+    "s",
+    "sh",
+    "t",
+    "th",
+    "ts",
+    "ty",
+    "u",
+    "u:",
+    "ua",
+    "uai",
+    "uan",
+    "uang",
+    "uh",
+    "ui",
+    "un",
+    "uo",
+    "uw",
+    "v",
+    "van",
+    "ve",
+    "vn",
+    "w",
+    "x",
+    "y",
+    "z",
+    "zh",
+    "zy",
+    "~",
+    "¡",
+    "¿",
+    "æ",
+    "ç",
+    "ð",
+    "ø",
+    "ŋ",
+    "œ",
+    "ɐ",
+    "ɑ",
+    "ɒ",
+    "ɔ",
+    "ɕ",
+    "ə",
+    "ɛ",
+    "ɜ",
+    "ɡ",
+    "ɣ",
+    "ɥ",
+    "ɦ",
+    "ɪ",
+    "ɫ",
+    "ɬ",
+    "ɭ",
+    "ɯ",
+    "ɲ",
+    "ɵ",
+    "ɸ",
+    "ɹ",
+    "ɾ",
+    "ʁ",
+    "ʃ",
+    "ʊ",
+    "ʌ",
+    "ʎ",
+    "ʏ",
+    "ʑ",
+    "ʒ",
+    "ʝ",
+    "ʲ",
+    "ˈ",
+    "ˌ",
+    "ː",
+    "̃",
+    "̩",
+    "β",
+    "θ",
+    "ᄀ",
+    "k͡p",
+    "ˈa",
+    "ɤ",
+    "ˈɛ",
+    "ˈi",
+    "ă",
+    "ˈe",
+    "ʔ",
+    "ŋ͡m",
+    "tʰ",
+    "ɤ̆",
+    "ᄌ",
+    "ᄍ",
+    "ᄎ",
+    "ᄏ",
+    "ᄐ",
+    "ᄑ",
+    "ᄒ",
+    "ᅡ",
+    "ᅢ",
+    "ᅣ",
+    "ᅤ",
+    "ᅥ",
+    "ᅦ",
+    "ᅧ",
+    "ᅨ",
+    "ᅩ",
+    "ᅪ",
+    "ᅫ",
+    "ᅬ",
+    "ᅭ",
+    "ᅮ",
+    "ᅯ",
+    "ᅰ",
+    "ᅱ",
+    "ᅲ",
+    "ᅳ",
+    "ᅴ",
+    "ᅵ",
+    "ᆨ",
+    "ᆫ",
+    "ᆮ",
+    "ᆯ",
+    "ᆷ",
+    "ᆸ",
+    "ᆼ",
+    "ㄸ",
+    "!",
+    "?",
+    "…",
+    ",",
+    ".",
+    "'",
+    "-",
+    "SP",
+    "UNK"
+  ]
 }
