--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,7 @@ torch
 torchaudio
 cached_path
 transformers==4.27.4
-num2words==0.5.12
-unidic_lite==1.0.8
-unidic==1.1.0
-mecab-python3==1.0.9
-pykakasi==2.2.1
-fugashi==1.3.0
 g2p_en==2.1.0
-anyascii==0.3.2
-jamo==0.4.1
-gruut[de,es,fr]==2.2.3
-g2pkk>=0.1.1
 librosa==0.9.1
 pydub==0.25.1
 eng_to_ipa==0.0.2
@@ -22,8 +12,11 @@ unidecode==1.3.7
 pypinyin==0.50.0
 cn2an==0.5.22
 jieba==0.42.1
-gradio
-langid==1.1.6
 tqdm
 tensorboard==2.16.2
 loguru==0.7.2
+underthesea==6.8.4
+segments==2.2.1
+pyarrow
+matplotlib==3.7.0
+numpy==1.26.4
